// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should FilmCard render correctly With active 1`] = `
<article
  className="small-movie-card catalog__movies-card"
  data-id={1}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <video
    height="175"
    muted={true}
    poster="img/the-grand-budapest-hotel-poster.jpg"
    src="https://some-link"
    width="280"
  />
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="/films/1"
      onClick={[Function]}
    >
      The Grand Budapest Hotel
    </a>
  </h3>
</article>
`;

exports[`Should FilmCard render correctly With no active 1`] = `
<article
  className="small-movie-card catalog__movies-card"
  data-id={1}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <img
      alt="The Grand Budapest Hotel"
      height="175"
      src="img/the-grand-budapest-hotel-poster.jpg"
      width="280"
    />
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="/films/1"
      onClick={[Function]}
    >
      The Grand Budapest Hotel
    </a>
  </h3>
</article>
`;
